data/derived/comb/progs/unify/prog2402.ml.out
Characters 8-18:
  let _ = mulByDigit -5 [0;0;0];;
          ^^^^^^^^^^
Error: This expression has type int -> int list -> int list
       but an expression was expected of type int
